--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+tmp/
+*.db
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
