--- a/igm-config_all.json
+++ b/igm-config_all.json
@@ -1,1 +1,181 @@
+{
+    "genome": {
+        "assembly": "hg38",
+        "ploidy": "male",
+        "usechr": [
+            "#",
+            "X",
+            "Y"
+        ],
+        "segmentation": 200000
+    },
+    "model": {
+        "population_size": 1000,
+        "occupancy": 0.6,
+        "restraints": {
+            "excluded": {
+                "evfactor": 1.0
+            },
+            "envelope": {
+                "nucleus_shape": "ellipsoid",
+                "nucleus_semiaxes": [7840.0, 6470.0, 2450.0],
+                "nucleus_kspring": 1.0
+            },
+            "polymer": {
+                "contact_range": 2.0,
+                "polymer_bonds_style": "simple",
+                "polymer_kspring": 1.0
+            }
+        }
+    },
+    "restraints": {
+        "Hi-C": {
+            "input_matrix": ".hcs file, Hi-C matrix input of contact probabilities",
+            "intra_sigma_list": [
+                1.0,
+                0.5,
+                0.2,
+                0.1,
+                0.05,
+                0.01,
+                0.008
+            ],
+            "inter_sigma_list": [
+                1.0,
+                0.5,
+                0.2,
+                0.1,
+                0.05,
+                0.01,
+                0.008
+            ],
+            "contact_range": 2.0,
+            "contact_kspring": 1.0,
+            "actdist_file": "actdist.h5",
+            "tmp_dir": "actdist",
+            "keep_temporary_files": false,
+            "run_evaluation_step": false
+        },
+        "FISH" : {
+            "input_fish" : "h5py file, FISH input, list of distance distributions for radial or pairwise 3D HIPMap FISH data",
+            "rtype" : "p",
+            "kspring" : 1.0,
+            "tmp_dir" : "fish_actdist",
+            "keep_temporary_files" : "true",
+            "tol_list" : [200.0, 100.0, 100.0, 100.0, 50.0, 50.0, 50.0, 25.0],
+            "fish_assignment_file": "fish_assignment.h5"
+        },
+        "sprite" : {
+            "clusters": "h5py file, SPRITE input, list of loci colocalizing = list of clusters of loci",
+            "volume_fraction_list": [0.001, 0.001, 0.005, 0.005, 0.005, 0.01, 0.01, 0.05],
+            "radius_kt": 50.0,
+            "assignment_file": "sprite_assignment.h5",
+            "tmp_dir": "sprite_assign",
+            "keep_temporary_files": false,
+            "batch_size": 10,
+            "kspring": 1.0
+        },
 
+         "DamID": {
+            "input_profile": ".txt file, lamina DamID input, contact probabilities with the lamina",
+            "sigma_list": [
+                0.8, 0.8, 0.6, 0.6, 0.45, 0.45, 0.3, 0.3
+            ],
+            "contact_range": 0.05,
+            "contact_kspring": 1.0,
+            "damid_actdist_file": "actdist.h5",
+            "tmp_dir": "damid",
+            "keep_temporary_files": false
+        }
+
+    },
+    "optimization": {
+        "min_iterations": 5,
+        "force_last_iteration": true,
+        "force_minimum_iterations_hic_cutoff": 0.0,
+        "max_iterations": 12,
+        "violation_tolerance": 0.05,
+        "max_violations": 0.01,
+        "structure_output": "igm-model.hss",
+        "keep_intermediate_structures": true,
+        "kernel": "lammps",
+        "tmp_dir": "opt",
+        "clean_restart": false,
+        "keep_temporary_files": false,
+        "kernel_opts": {
+            "lammps": {
+                "lammps_executable": "/u/home/b/bonimba/lammpgen/src/lmp_serial",
+                "seed": 6535,
+                "max_neigh": 6000,
+                "use_gpu": false
+            }
+        },
+        "optimizer_options": {
+            "mdsteps": 40000,
+            "timestep": 0.25,
+            "tstart": 500.0,
+            "tstop": 0.01,
+            "custom_annealing_protocol": {
+                "num_steps": 4,
+                "mdsteps": [
+                    5000,
+                    15000,
+                    15000,
+                    10000
+                ],
+                "tstarts": [
+                    5000.0,
+                    500.0,
+                    50.0,
+                    1.0
+                ],
+                "tstops": [
+                    500.0,
+                    50.0,
+                    1.0,
+                    0.0
+                ],
+                "evfactors": [
+                    0.5,
+                    1.0,
+                    1.0,
+                    1.0
+                ],
+                "envelope_factors": [
+                    1.2,
+                    1.0,
+                    1.0,
+                    1.0
+                ],
+                "relax": {
+                    "mdsteps": 200,
+                    "temperature": 1.0,
+                    "max_velocity": 10.0
+                }
+            },
+            "damp": 50.0,
+            "max_velocity": 1000.0,
+            "etol": 0.0001,
+            "ftol": 1e-06,
+            "max_cg_iter": 500,
+            "max_cg_eval": 500,
+            "thermo": 1000,
+            "write": -1
+        }
+    },
+    "parameters": {
+        "step_db": "stepdb.sqlite",
+        "tmp_dir": "/u/scratch/b/bonimba/HFF_all_longer/tmp",
+        "log": "igm.log",
+        "log_level": "debug"
+    },
+    "parallel": {
+        "controller": "ipyparallel",
+        "controller_options": {
+            "ipyparallel": {
+                "max_tasks": 5000
+            }
+        }
+    }
+}
+       
